--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.4",
     "rxjs": "~6.5.5",
     "stencil-viskhan-promo-v1": "0.0.1",
+    "stencil-viskhan-promo-v2": "^0.2.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
